--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
+    left:0;
+    top: 0;
     box-sizing: border-box;
     background-attachment: fixed;
 }
@@ -12,23 +13,74 @@ color: #000000;
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(/Images/pleasework.jpeg);
+    background-color: #b1b273;
     background-size: cover;
     background-position: center;
     text-align: left;
 }
 
+#header-text{
+    display: flex;
+    flex-basis: 35%;
+    justify-content: space-between;
+    padding: 60px;
+    margin: 10rem auto 0 auto
+}
+.header-text img{
+    height: 500px;
+    border-radius: 15px;
+    width: 100;
+    flex-wrap: wrap;
+}
 .container{
     padding: 10px 10%;
+    
+}
+#header h1{
+    float: left;
+    letter-spacing: 0.5px;
+    cursor: pointer;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
 }
 
 nav{
+    width: 100%;
+    height: 75px;
+    line-height: 75px;
+    padding: 0px 100px;
+    position: fixed;
+    background-image: linear-gradient(white, #b1b273);
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
 }
-
+nav ul{
+        float: right;
+    }
+nav li{
+        display: inline-block;
+        list-style: none;
+    }
+nav li a{
+    font-size: 18px;
+    padding: 0px 30px;
+    text-decoration: none;
+}
+li{
+    display: block;
+    float: right;
+}
+li a{
+    display: block;
+    padding: 8px;
+}
+ul{
+    position: fixed;
+    top:0;
+    width: 100%;
+}
 nav ul li{
     display: inline-block;
     list-style: none;
@@ -39,16 +91,18 @@ nav ul li a{
     color: black;
     text-decoration: none;
     font-size: 18px;
-    position: relative;
 }
 nav ul li a::after{
     content: '';
     width: 0;
     height: 3px;
     background: black;
-    position: absolute;
+    /* position: absolute; */
     left: 0;
-    bottom: -6px;
+    bottom: 6px;
+    display: block;
+    margin: auto;
+    
     transition: 0.5s;
 }
 nav ul li a:hover::after{
@@ -107,9 +161,9 @@ nav ul li a:hover::after{
     content: '';
     width: 0;
     height: 3px;
-    background: black;
+    background: blue;
     position: absolute;
-    left: 0;
+    left: 5;
     bottom: -8px;
     transition: 0.5s;
 }
@@ -121,7 +175,7 @@ nav ul li a:hover::after{
     margin: 10px 0;
 }
 .tab-contents ul li span{
-    color: black;
+    color: darkblue;
     font-size: 14px;
 }
 .tab-contents{
