--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     background-attachment: fixed;
 }
 body{
-background: #ffecfd(90, 145, 109);
+/* background: #F1F1C0(90, 145, 109); */
 color: #000000;
 }
 section{
@@ -124,17 +124,10 @@ li a{
     display: block;
     padding: 8px;
 }
-/* ul{
-    position: fixed;
-    top:0;
-    width: 100%;
-    text-align: left;
-} */
 nav ul li{
     display: inline-block;
     list-style: none;
     margin: 10px 10px;
-
 }
 
 nav ul li a{
@@ -170,14 +163,16 @@ nav ul li a:hover::after{
     margin-top: 20px;
 }
 /* ------------About Me----------- */
-#about{
+/* #about{
     padding: 100px 0;
-    color: #073520
-}
+    background-color: #073520;
+} */
 .about{
     width: 100%;
-    padding: 80px 0px;
-    background-color: rgb(208, 235, 248);
+    height: 725px;
+    padding: 70px 0px;
+    margin-bottom: 0%;
+    background-color: #cdcf98;
 }
 .row{
     display: flex;
@@ -186,15 +181,18 @@ nav ul li a:hover::after{
 }
 .about-col-1{
     flex-basis: 35%;
-    margin-top: 20px;
+    margin-top: 10px;
+    margin-left: 1%;
 }
 .about-col-1 img{
     width: 100%;
-    border-radius: 15px;
+    margin-top: 10%;
+    border-radius: 50px;
 }
 .about-col-2{
     flex-basis: 60%;
-    margin-top: 20px;
+    margin-top: 30px;
+    margin-right: 2%;
 }
 .sub-title{
     font-size: 60px;
@@ -216,7 +214,7 @@ nav ul li a:hover::after{
     content: '';
     width: 0;
     height: 3px;
-    background: blue;
+    background: black;
     position: absolute;
     left: 0;
     bottom: -8px;
@@ -230,7 +228,7 @@ nav ul li a:hover::after{
     margin: 10px 0;
 }
 .tab-contents ul li span{
-    color: darkblue;
+    color: #67674f;
     font-size: 14px;
 }
 .tab-contents{
@@ -244,9 +242,6 @@ nav ul li a:hover::after{
     max-height: 50px;
     background-color: #F1F1C0;
     padding: 5rem 9% 2rem;
-    /* overflow-y: auto; */
-    /* margin-top: 0px;
-    margin-bottom: 0px; */
 }
 .menu{
     display: flex;
@@ -263,7 +258,7 @@ nav ul li a:hover::after{
     display: flex;
     align-items: flex-start;
 }
-.bar-logo{
+.bar-logo ul{
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -271,6 +266,7 @@ nav ul li a:hover::after{
     flex-direction: column;
     border-top: 1px solid #000;
     padding-top: 10px;
+    position: relative;
 }
 .bar-logo a{
     text-decoration: none;
@@ -279,8 +275,12 @@ nav ul li a:hover::after{
 }
 .bar-logo li:hover{
     margin-left: 5px;
+    position: relative;
 }
-.bar-logo-right{
+.bar-logo-right ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
     margin-left: 300px;
 }
 .menu{
@@ -291,6 +291,44 @@ nav ul li a:hover::after{
 }
 .column-image img{
     max-width: 100%;
+}
+/* ------------Blog------------- */
+#blog{
+    padding: 50px 0;
+    margin-top: 10%;
+}
+.blog-sub-title{
+    text-align: center;
+}
+.blog-list{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+    grid-gap:150px;
+    margin-top: 50px;
+    
+}
+.post{
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+    margin-left: 2%;
+    margin-right: 2%;
+}
+.blog img{
+    width: 100%;
+    border-radius: 10px;
+    display: block;
+    margin-top: 40%;
+}
+.layer{
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(255, 255, 255, 0.6), #cdcf98);
+    border-radius: 10px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
 }
 
   /* ------------- Footer -------------- */
