--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ nav ul{
 nav li{
         display: inline-block;
         list-style: none;
+        float: right;
     }
 nav li a{
     font-size: 50px;
@@ -118,7 +119,7 @@ nav li a{
 }
 li{
     display: block;
-    float: right;
+    /* float: right; */
 }
 li a{
     display: block;
@@ -241,12 +242,12 @@ nav ul li a:hover::after{
 .aside-menu{
     max-height: 50px;
     background-color: #F1F1C0;
-    padding: 5rem 9% 2rem;
+    /* padding: 5rem 9% 2rem; */
 }
 .menu{
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    /* align-items: center; */
     padding: 5px;
     width: 100%;
     height: 180px;
@@ -256,7 +257,7 @@ nav ul li a:hover::after{
 }
 .bar-container{
     display: flex;
-    align-items: flex-start;
+    /* align-items: flex-start; */
 }
 .bar-logo ul{
     list-style-type: none;
@@ -277,11 +278,21 @@ nav ul li a:hover::after{
     margin-left: 5px;
     position: relative;
 }
-.bar-logo-right ul{
+
+.bar-logo-left{
     list-style-type: none;
     margin: 0;
     padding: 0;
-    margin-left: 300px;
+    float: left;
+    width: 50%;
+}
+
+.bar-logo-right{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    float: right;
+    width: 50%;
 }
 .menu{
     justify-content: space-around;
@@ -330,7 +341,15 @@ nav ul li a:hover::after{
     bottom: 0;
     overflow: hidden;
 }
-
+/* -------------Dashboard---------- */
+table, th, td {
+    border: 1px solid black;
+    margin-top: 250px;
+    margin-left: 210px;
+    font-size: large;
+    width: auto;
+    align-items: center;
+  }
   /* ------------- Footer -------------- */
 footer{
     text-align: center;
