--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
     background-attachment: fixed;
 }
 body{
-/* background: #F1F1C0(90, 145, 109); */
 color: #000000;
 }
 section{
@@ -29,7 +28,7 @@ section{
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
 }
-
+/* -----------home------------ */
 .home{
     display: flex;
     justify-content: center;
@@ -45,6 +44,7 @@ section{
     font-size: 30px;
     font-weight: 300;
     line-height: 0.5;
+    margin-top: 50px;
 }
 .home-content h1{
     font-size: 4rem;
@@ -52,6 +52,7 @@ section{
     line-height: 1.3;
     margin: 0;
     text-align: left;
+    margin-top: 50px;
 }
 .social-media a{
     display:inline-flex;
@@ -83,12 +84,13 @@ section{
     color: black;
     letter-spacing: .1rem;
     font-weight: 300;
+    margin-top: 60px
 }
 .btn:hover{
     box-shadow: none;
 }
 
-
+/* -----------header------------ */
 nav{
     width: 100%;
     height: 90px;
@@ -148,7 +150,7 @@ nav ul li a::after{
     transition: 0.5s;
 }
 nav ul li a:hover::after{
-    width: 100%;
+   width: 100%;
 }
 .header-text{
     margin-top: 20%;
@@ -166,7 +168,7 @@ nav ul li a:hover::after{
 /* ------------About Me----------- */
 .about{
     width: 100%;
-    height: 725px;
+    height: 780px;
     padding: 70px 0px;
     margin-bottom: 0%;
     background-color: #cdcf98;
@@ -183,26 +185,32 @@ nav ul li a:hover::after{
 }
 .about-col-1 img{
     width: 100%;
-    margin-top: 10%;
+    margin-top: 20%;
     border-radius: 50px;
 }
 .about-col-2{
     flex-basis: 60%;
-    margin-top: 30px;
+    margin-top: 100px;
     margin-right: 2%;
+    font-size: large;
+    padding-left: 3%;
+}
+.about-col-2 p{
+    font-size: 22px;
+    /* padding-left: 3%; */
+    padding-right: 5%;
 }
 .sub-title{
-    font-size: 60px;
-    font-weight: 600;
+    font-size: 50px;
     color: black;
 }
 .tab-titles{
     display: flex;
-    margin: 20px 0 40px;
+    margin: 50px 0 40px;
 }
 .tab-links{
     margin-right: 50px;
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 500;
     cursor: pointer;
     position: relative;
@@ -211,10 +219,10 @@ nav ul li a:hover::after{
     content: '';
     width: 0;
     height: 3px;
-    background: black;
+    background: rgb(241, 241, 192);
     position: absolute;
     left: 0;
-    bottom: -8px;
+    bottom: -5px;
     transition: 0.5s;
 }
 .tab-links.active-link::after{
@@ -222,11 +230,13 @@ nav ul li a:hover::after{
 }
 .tab-contents ul li{
     list-style: none;
-    margin: 10px 0;
+    margin: 0px 0;
+    font-size: 20px;
 }
 .tab-contents ul li span{
-    color: #67674f;
-    font-size: 15px;
+    color: #F1F1C0;
+    font-size: 23px;
+    font-weight: 500;
 }
 .tab-contents{
     display: none;
@@ -235,11 +245,18 @@ nav ul li a:hover::after{
 .tab-contents.active-tab{
     display: block;
 }
+/* ------------About ICT Section----------- */
+.personal-information{
+    font-size: large;
+    background-color: #F1F1C0;
+    text-align: center;
+}
 /* -----------Aside Menu----------- */
 .aside-menu{
-    max-height: 50px;
+    max-height: 100px;
     background-color: #F1F1C0;
     padding: 5rem 9% 2rem;
+    font-size: large;
 }
 .menu{
     display: flex;
@@ -247,7 +264,7 @@ nav ul li a:hover::after{
     align-items: center;
     padding: 5px;
     width: 100%;
-    height: 180px;
+    height: 200px;
     background-color: #F1F1C0;
     text-align: center;
 
@@ -262,17 +279,17 @@ nav ul li a:hover::after{
     padding: 0;
     display: flex;
     flex-direction: column;
-    border-top: 1px solid #000;
-    padding-top: 10px;
+    /* border-top: 1px solid #000; */
+    padding-top: 45px;
     position: relative;
 }
 .bar-logo a{
     text-decoration: none;
     color: #000000;
-    margin: 5px 0;
+    margin: 3px 0;
 }
-.bar-logo li:hover{
-    margin-left: 5px;
+.bar-logo li a:hover{
+    color: #ec3dba;
     position: relative;
 }
 
@@ -281,7 +298,7 @@ nav ul li a:hover::after{
     margin: 0;
     padding: 0;
     float: left;
-    width: 50%;
+    width: 100%;
 }
 
 .bar-logo-right{
@@ -289,7 +306,9 @@ nav ul li a:hover::after{
     margin: 0;
     padding: 0;
     float: right;
-    width: 50%;
+    width: 100%;
+    margin-left: 200px;
+    margin-top: 20px;
 }
 .menu{
     justify-content: space-around;
@@ -299,19 +318,22 @@ nav ul li a:hover::after{
 }
 .column-image img{
     max-width: 100%;
+    margin-top: 60px;
 }
 /* ------------Blog------------- */
 #blog{
-    padding: 50px 0;
+    padding: 0px 0;
     margin-top: 10%;
 }
 .blog-sub-title{
     text-align: center;
+    font-family:'Times New Roman', Times, serif;
+    padding-bottom: 50px;
 }
 .blog-list{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
-    grid-gap:150px;
+    grid-gap:50px;
     margin-top: 50px;
     
 }
@@ -319,8 +341,9 @@ nav ul li a:hover::after{
     border-radius: 10px;
     position: relative;
     overflow: hidden;
-    margin-left: 2%;
-    margin-right: 2%;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-bottom: 200px;
 }
 .blog img{
     width: 100%;
@@ -337,7 +360,13 @@ nav ul li a:hover::after{
     left: 0;
     bottom: 0;
     overflow: hidden;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    text-align: center;
 }
+
 /* -------------Dashboard---------- */
 table{
     position: absolute;
@@ -382,26 +411,6 @@ select {
     background-color: #fff;
     color: #333;
 }
-
-/* Style the dropdown arrow */
-select::-ms-expand {
-    display: none; /* Hide the default arrow on IE/Edge */
-}
-
-/* Style the options in the dropdown */
-select option {
-    background-color: #fff;
-    color: #333;
-}
-
-/* Style the dropdown when it's focused */
-select:focus {
-    outline: none;
-    border-color: #007bff; /* Change border color on focus */
-    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5); /* Add a shadow on focus */
-}
-
-
 
 /* -----------Progress-------- */
 .progress-container{
